# rs-http-server

./: .gitignore  Cargo.toml  README.md
crates/http_lib/: Cargo.toml
crates/http_lib/src/: advance.rs  chars.rs  field.rs  lib.rs  macros.rs  method.rs  request.rs  response.rs  transcode.rs  version.rs
crates/http_lib/src/response/: code.rs
crates/http_server/: Cargo.toml
crates/http_server/src/: config.rs  dir.hbs  macros.rs  main.rs  router.rs  stream_handler.rs
