[workspace]
members = ["crates/http_lib", "crates/http_server"]

[workspace.dependencies]
pico-args = "0.5"
simplelog = "0.12"
log = "0.4"
bytes = "1.4"
handlebars = "4.3"
serde_json = "1.0"
httpdate = "1.0"
indexmap = "2.0"
once_cell = "1.18"
http_lib = { path = "crates/http_lib" }
serde = "1"
mime = "0.3"
mime_guess = "2.0"
